--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://leilaabdel.github.io/radiology-dtm/"
 languageCode = "en-us"
 title = "Radiology Dynamic Topic Modeling through COVID-19"
 theme = "ananke"
