[MOD] Added background image

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "http://leilaabdel.github.io/radiology-dtm/"
 languageCode = "en-us"
 title = "Radiology Dynamic Topic Modeling through COVID-19"
 theme = "ananke"
+copyright = "Leila Abdelrahman"
